--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 install: true
 addons:
   sonarqube:
-    organization: "msgjt-github"
+    organization: "msgjt"
     branches:
       - master
       - develop
